Fix container spacing issues

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -35,6 +35,13 @@ hr{
   margin:15px 0px;
 }
 
+.container-inner{
+  @media (min-width: 768px) {
+    padding-left:76px;
+    padding-right:76px;
+  }
+}
+
 .bg-grey-lightest{
   background-color: $gray-lightest;
 }
