--- a/resources/assets/sass/partials/_navbar.scss
+++ b/resources/assets/sass/partials/_navbar.scss
@@ -53,8 +53,6 @@
   @media (min-width: 768px) {
     .container-inner{
       flex-direction: row;
-      padding-left:76px;
-      padding-right:76px;
       .navbar-collapse{
         .collapse-inner{
           flex-direction: row;
